--- a/src/app/translation/translations/de.json
+++ b/src/app/translation/translations/de.json
@@ -1295,7 +1295,7 @@
         "fromemail": "From Email",
         "host": "Host",
         "username": "Benutzername",
-        "Passwort": "Passwort",
+        "password": "Passwort",
         "port": "Port",
         "cancel": "ABBRECHEN",
         "save": "SPEICHERN"
