--- a/src/app/translation/translations/de.json
+++ b/src/app/translation/translations/de.json
@@ -151,7 +151,7 @@
       "processorresponse": "Processor Response",
       "new": "Neu",
       "rebill": "Neubelastung",
-      "success": "Success",
+      "success": "Erfolg",
       "decline": "Decline",
       "error": "Error"
     },
@@ -212,10 +212,10 @@
         "firstname": "Vorname",
         "lastname": "Nachname",
         "workphone": "Work Phone",
-        "cellphone": "Cell Phone",
+        "cellphone": "Handy",
         "timezone": "Timezone",
         "email": "Email",
-        "language": "Language",
+        "language": "Sprache",
         "update": "AKTUALISIEREN"
       },
       "notifications": {
@@ -237,10 +237,10 @@
         }
       },
       "accounts": {
-        "title": "Your Konten",
+        "title": "Ihre Konten",
         "accountname": "Name",
-        "rolename": "Role",
-        "view": "View Account"
+        "rolename": "Nutzerrolle",
+        "view": "Konto ansehen"
       },
       "signingstrings": {
         "title": "Your Signing Strings",
@@ -262,7 +262,7 @@
         "title": "Events Funnel",
         "subtitle": "Events by Event type",
         "event": "Event",
-        "count": "Count",
+        "count": "Anzahl",
         "percentage": "Percentage",
         "relativepercentage": "Relative Percentage"
       },
@@ -275,7 +275,7 @@
         "title": "Events by Affiliate",
         "subtitle": "Events from the top Vertriebspartner",
         "affiliate": "Vertriebspartner",
-        "count": "Count",
+        "count": "Anzahl",
         "percentage": "Percentage",
         "nodata": "No Events Found"
       },
@@ -283,8 +283,8 @@
         "title": "Transaktionen by Affiliate",
         "subtitle": "Transaktionen from the top Vertriebspartner",
         "affiliate": "Vertriebspartner",
-        "count": "Count",
-        "countp": "Count%",
+        "count": "Anzahl",
+        "countp": "Anzahl%",
         "amount": "Betrag",
         "amountp": "Betrag%",
         "nodata": "No Transaktionen Found"
@@ -410,22 +410,22 @@
       },
       "advanced": {
         "toggle": "ADVANCED SEARCH",
-        "search": "Search",
+        "search": "Suche",
         "firstname": "Vorname",
         "lastname": "Nachname",
-        "phone": "Phone Number",
-        "email": "Email Address",
+        "phone": "Telefonnummer",
+        "email": "Email Addresse",
         "trackingnumber": "Shipment Tracking Number",
         "address1": "Adresse 1",
         "address2": "Adresse 2",
-        "city": "City",
+        "city": "Stadt",
         "zip": "Postleitzahl",
-        "state": "State",
-        "country": "Country",
+        "state": "Bundesstadt",
+        "country": "Land",
         "alias": "Transaction Alias",
         "cctype": "Credit Card Type",
-        "ccf6": "Credit Card # first 6",
-        "ccl4": "Credit Card # last 4",
+        "ccf6": "Kreditkartenummer - Erste 6 Nummer",
+        "ccl4": "Kreditkartenummer - Letzte 4 Nummer",
         "amount": "Betrag",
         "created": "Geschafft am",
         "sku": "Lagerhaltungsnummer",
@@ -434,18 +434,18 @@
         "status": "Receipt Status",
         "merchantprovider": "Merchant Anbieter",
         "fulfillmentprovider": "Fulfillment Provider",
-        "ship": "Ship",
+        "ship": "Versand",
         "shipdelay": "Shipping Delay",
         "schedulesnum": "Number of Schedules",
         "bill": "Billed at",
         "parentsession": "Muttersession",
-        "product": "Product",
-        "start": "Start",
-        "end": "End",
+        "product": "Produkt",
+        "start": "Beginn",
+        "end": "Ende",
         "price": "Preis",
         "id": "ID"
       },
-      "category": "Category",
+      "category": "Kategorie",
       "refined": "REFINED RESULTS",
       "reset": "RESET SEARCH",
       "date": {
