Fix translations on spes

--- a/src/app/translation/translations/zh_CN.json
+++ b/src/app/translation/translations/zh_CN.json
@@ -492,6 +492,7 @@
         }
     },
     "account": {
+        "title": "Account",
         "index": {
             "title": "帐号",
             "header": {
