hy.json edited online with Bitbucket. Fixed error.

--- a/src/app/translation/translations/hy.json
+++ b/src/app/translation/translations/hy.json
@@ -663,7 +663,7 @@
     },
     "events": {
       "title": "Հաճախորդի իրադարձություններ",
-      "subtitle": "Աշխատաշրջաններ, գործարքներ և լիդեր
+      "subtitle": "Աշխատաշրջաններ, գործարքներ և լիդեր",
       "nodata": "Իրադարձություններ չկան:",
       "today": "Այսօր",
       "days7": "Վերջին 7 օրում",
